# string-span

./: CMakeLists.txt  README.md
string-span/: CMakeLists.txt
string-span/include/: strspan.hpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
